stylesheet.css
body,
html {
    margin: 0;
    padding: 0;
    font-family: "Roboto", "Rubik", "sans-serif";
    /* background-image: url("/assets/images/gray-bg-2.jpg"); */
    color: aliceblue;
    background-color: #000000;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    box-sizing: border-box;
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow: auto;
}

.scroller {
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow: auto;

}


::-webkit-scrollbar {
    background-color: rgb(0, 136, 141);
    filter: drop-shadow(0 0 5px gold);
    width: 3px;
    border: 7px solid black;
    width: 20px;
}

::-webkit-scrollbar-thumb {
    background-color: transparent;
    border: 2px solid gold;
    filter: drop-shadow(0 0 5px rgb(32, 28, 7));
    border-radius: 10px;
    width: 3.1px;


}

.logo-img {
    height: 50px;
    width: 50px;
    border-radius: 50%;
    position: relative;
    left: 50px;
}


.header-container {
    /* background-color: #7e7b7bc1; */
    background-color: rgb(0, 136, 141);
    /* position: fixed; */

}

.logo-img {
    position: relative;

}




.nav-bar img {
    height: 40px;
    width: 40px;
    border-radius: 50%;
    margin-right: 10px;
    position: relative;
    left: 8px;
    top: -15px;
    opacity: 0.5;
}



.page-main-content {
    position: relative;
    top: -3px;
    width: 100%;
    padding: 20px;
    height: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow: auto;

}

.page-main-content::before {
    /* background-image: url('/assets/images/teal-blk-bg-dark.jpg'); */
    background-image: url('https://i.pinimg.com/originals/f4/04/03/f40403cdd7ff02dc740eb85285ae8def.jpg');

    content: ' ';
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    opacity: 0.4;

    /* background-image: url('/assets/images/teal-blk-bg-dark.jpg');  */
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;

    background-attachment: fixed;
}

button {
    cursor: pointer;
}

.navbar {
    border: 5px solid black;
    margin: 0%;
    /* border-top-left-radius: 9rem 10rem;
    border-top-right-radius: 1rem 1rem;
    border-bottom-left-radius: 0.8rem 1rem;
    border-bottom-right-radius: 10rem 7rem; */
}

.currencies-main-content {
    display: block;
    position: relative;
    top: 20px;
}

.reports-main-content {
    display: none;

}

.about-main-content {
    display: none;


}

.header-link {
    position: relative;
    left: 32px;
    margin: 10px;
    text-decoration: none;
    font-size: larger;
    font-weight: 900;
    color: gold;
    cursor: pointer;
}

.accordion-body {
    color: white;
    opacity: 1;
}

.accordion-collapse {
    background-color: #000000;
}


input {
    padding: 4px;
}

.search-bar {
    background: rgba(214, 211, 211, 0.873);
    position: absolute;
    max-width: 130px;
    right: 25%;
    top: 20px;
    border-top-left-radius: 9rem 10rem;
    border-top-right-radius: 1rem 1rem;
    border-bottom-left-radius: 0.8rem 1rem;
    border-bottom-right-radius: 10rem 7rem;
    filter: drop-shadow(0 0 3px black);
    padding: 8px;
    font-weight: bolder;
    z-index: 3;
    padding-left: 25px;
    font-size: 16px;
    font-weight:lighter;



}


.search-bar:focus {
    background: rgba(98, 97, 97, 0.873);
    border: 2px solid gold;
    filter: drop-shadow(0 0 5px gold);
    font-weight: bolder;
}

/* 
.cards-container{
    max-width: 916px;
    width: calc(100% - 20px)
} */

.modal-content {
    background-color: #000000;
    border: 1px solid white;

}

.modal-title {
    font-size: larger;
    background-color: transparent;
    color: #f4f4f9;
}

.modal-card {
    background-color: rgba(255, 255, 255, 0.9);
    color: aliceblue;
    border: 1px solid aliceblue;
    margin: 4px;
    z-index: 1;
    /* display: inline-block; */
    position: relative;
    font-size: small;
    font-weight: bolder;
    /* overflow: hidden; */
    cursor: pointer;
    z-index: 1;

}

.card {

    background-color: rgba(0, 0, 0, 0.7);
    color: aliceblue;
    border: 1px solid aliceblue;
    margin: 4px;
    z-index: 1;
    /* display: inline-block; */
    position: relative;
    font-size: small;
    font-weight: bolder;
    /* overflow: hidden; */
    cursor: pointer;
    z-index: 1;
    min-height: 280px;
    /* overflow: hidden; */
}

tr {
    margin: 1px;
    padding: 1px;
}

th {
    margin: 1px;
    padding: 1px;
}

.card:hover {
    background-color: rgba(73, 71, 71, 0.95);
    filter: drop-shadow(0 0 5px rgb(253, 253, 251));

    /* -webkit-text-stroke: 1px black; width and color */

}

.card.open-card {
    position: relative;
    z-index: 3;
    border: 3px solid gold;
    filter: drop-shadow(0 0 5px gold);
    background-color: rgba(73, 71, 71, 0.95);
    scale: 1.04;

}

/* 
.card::before {
    background: radial-gradient(
        800px circle at var(--mouse-x) var(--mouse-y),
        rgba(255, 255, 255, 0.948),
        transparent 40%
    );
    border-radius: inherit;
    content: "";
    height: 100%;
    left: 0px;
    position: absolute;
    top: 0%;
    width: 100%;
    z-index: 0;
} */


.accordion-button {
    font-weight: bolder;
}

.more-info-btn {
    border: none;
    border-radius: 8%;
    /* display: inline-block; */
    position: relative;
    font-size: small;
    font-weight: bolder;
    width: 100px;
    height: 40px;
    padding: 5px;
    background-color: #000000;
    color: #fff;
    overflow: hidden;


}


.more-info-btn:hover,
.card:hover {
    scale: 1.04;
    transition: 0.5s;
    position: relative;
    z-index: 3.5;
}



.more-info-btn:active {
    scale: 0.97;
    background-color: #395141;
}


.more-info-btn::before {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) rotate(360deg);
    width: 120%;
    height: 110%;
    background-image: conic-gradient(rgb(6, 6, 6) 0deg, rgb(255, 254, 255) 90deg, transparent 130deg, transparent, #4b4b50 180deg, #818189 270deg, transparent 360deg);
    transition: 15s;
    scale: 1;

}


.more-info-btn:hover::before {
    transform: translate(-50%, -50%) rotate(-360deg);
    background-image: conic-gradient(gold 0deg, gold 90deg, transparent 130deg, transparent, #4b4b50 180deg, #818189 270deg, transparent 360deg);
    scale: 0.9;
}

.more-info-btn:hover::before {
    transform: translate(-50%, -50%) rotate(-360deg);
}

.more-info-btn::after {
    content: "More Info";
    color: #fff;
    position: absolute;
    display: flex;
    align-items: center;
    left: 50%;
    top: 50%;
    justify-content: center;
    width: 98px;
    height: 38px;
    padding: 5px;
    background-color: rgb(0, 136, 141);
    transform: translate(-50%, -50%);
    border-radius: 8%;
}



.more-info-btn:hover::after {
    color: rgb(3, 27, 33);
    /* -webkit-text-stroke: 0.1px black; width and color */


}

.card-title {
    font-size: 20px;
    color: whitesmoke;
    -webkit-text-stroke: 0.8px black;
    /* width and color */

}

.card-symbol {
    font-size: 42px;

}



.more-info-btn:active::after {
    background-color: rgb(3, 191, 238);
}



.modal-btn {
    width: 200px;
    margin: 5px;
    display: inline;
}




.card img {
    position: relative;
    display: inline-block;
    height: 40px;
    width: 40px;
    left: 20px;
    top: 20px;

}

.follow-coin-in-report-switch {
    position: absolute;
    right: 20px;
    top: 20px;
    transform: scale(1.5);
    /* background: purple;  */

}


.dollar-th {
    color: aliceblue;
}

form {
    color: #444444;
    border: 2px solid aqua;
    border-radius: 4%;
    padding: 35px;
    font-size: 16px;
    margin-bottom: 50px;
}



input {
    border-radius: 10%;
    /* margin-top: 5px; */
    /* margin-bottom: 5px; */
    width: 200px;

}


.card-table {
    border: 1px solid white;
    width: 100%;

}

.submit-btn {
    margin-top: 20px;
    margin-left: 100px;
    color: rgb(254, 254, 254);
    border: 2px solid aqua;
    border-radius: 15%;
    transition: all 0.5s;
}

.submit-btn:hover {
    color: aqua;
    border: 2px solid rgb(254, 254, 254);

}

.no-chosen-coins-message,
.no-results-message {
    padding: 30px;
    border-radius: 5% ;
    position: relative;
    top: 100px;
    font-size: 30px;
    border: 2px solid gold;
    filter: drop-shadow(0 0 5px gold)
}


.card-collapse {
    font-size: auto;
    display: grid;
    align-items: center;
    justify-items: center;
    /* position: absolute; */
    z-index: 2;
    border: 2px solid gold;

    border-radius: 8%;
    width: 100%;
    /* background-color: rgb(0, 136, 141); */

}

.navbar-toggler {

    position: relative;
    right: 30px;
    z-index: 3;
}

.switch-in-modal {
    position: absolute;
    bottom: 40px;
    right: 20%;
    scale: 1.8;
    
}

